# esruntime

./: Cargo.toml  devenv.nix
crates/macros/: Cargo.toml
crates/macros/src/: derive_command_input.rs  derive_event.rs  derive_event_set.rs  lib.rs
crates/postgres/: Cargo.toml
crates/postgres/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: command.rs  domain_id.rs  emit.rs  error.rs  event.rs  lib.rs  macros.rs
crates/server/: Cargo.toml  api-design.md
crates/server/src/: error.rs  lib.rs
examples/: transfer_funds.rs
examples/bank_account/: Cargo.toml
examples/bank_account/src/: events.rs  main.rs
examples/bank_account/src/commands/: mod.rs  open_account.rs  transfer_funds.rs
examples/kanban/: Cargo.toml
examples/kanban/src/: events.rs  main.rs  tui.rs  types.rs
examples/kanban/src/commands/: change_task_status.rs  create_task.rs  delete_task.rs  mod.rs  rename_task.rs
examples/kanban/src/projections/: tasks.rs
src/: command.rs  domain_id.rs  emit.rs  error.rs  event.rs  lib.rs  macros.rs  main.rs
