[workspace]
resolver = "3"
members = ["crates/*", "examples/*"]

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
axum-idempotent = "0.2"
base64 = "0.22"
chrono = "0.4"
crossterm = "0.29"
esruntime-sdk = { path = "crates/sdk" }
esruntime-sdk-macros = { path = "crates/macros" }
esruntime-server = { path = "crates/server" }
futures-util = "0.3"
indexmap = "2.12"
proc-macro2 = "1.0"
quote = "1.0"
ratatui = "0.30"
ruts = "0.7"
serde = "1.0"
serde_json = "1.0"
sqlx = "0.8"
syn = "2.0"
thiserror = "2.0"
tokio = "1.48"
tower-http = "0.6"
tracing = "0.1"
umadb-client = "0.2"
umadb-dcb = "0.2"
uuid = "1.19"
