[package]
name = "esruntime-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
esruntime-sdk.workspace = true
esruntime-sdk-macros.workspace = true
futures = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
umadb-client.workspace = true
umadb-dcb.workspace = true
uuid = { workspace = true, features = ["v4"] }

