[package]
name = "esruntime-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
esruntime-sdk-macros.workspace = true
futures-util.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
umadb-client.workspace = true
umadb-dcb.workspace = true
uuid = { workspace = true, features = ["v4"] }

