[package]
name = "esruntime-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum-idempotent.workspace = true
axum.workspace = true
base64.workspace = true
esruntime-sdk.workspace = true
ruts.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tower-http = { workspace = true, features = ["timeout"] }
tracing.workspace = true
umadb-client.workspace = true
umadb-dcb.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
